tests/baselines/reference/checkJsxChildrenProperty13.errors.txt
tests/cases/conformance/jsx/file.tsx(12,46): error TS2735: 'children' is overwritten by a later spread.


==== tests/cases/conformance/jsx/file.tsx (1 errors) ====
    import React = require('react');
    
    interface ButtonProp {
        a: number,
        b: string,
        children: Button;
    }
    
    class Button extends React.Component<ButtonProp, any> {
        render() {
            // Error children are specified twice
            return (<InnerButton {...this.props} children="hi">
                                                 ~~~~~~~~~~~~~
!!! error TS2735: 'children' is overwritten by a later spread.
                <div>Hello World</div>
                </InnerButton>);
        }
    }
    
    interface InnerButtonProp {
    	a: number
    }
    
    class InnerButton extends React.Component<InnerButtonProp, any> {
    	render() {
    		return (<button>Hello</button>);
    	}
    }
    